# morning-brief

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  gate.yml
config/: default.yaml
config/environments/: development.yaml  production.yaml  test.yaml
docs/: architecture.md  deployment-learning-guide.md  deployment-runbook.md  reusability-and-the-fde-role.md  security.md
docs/adr/: 0001-deployment.md
infra/: .gitignore  AWS_SETUP.md  README.md
infra/bootstrap/: main.tf  outputs.tf  variables.tf  versions.tf
infra/envs/prod/: backend.hcl.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/modules/audit_s3/: main.tf  outputs.tf  variables.tf
infra/modules/batch_lambda/: main.tf  outputs.tf  variables.tf
infra/modules/cicd/: main.tf  outputs.tf  variables.tf
infra/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/kms/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/observability/: main.tf  outputs.tf  variables.tf
infra/modules/secrets/: main.tf  outputs.tf  variables.tf
src/morning_brief/: __init__.py  __main__.py  aws_bootstrap.py  aws_handlers.py  cli.py
src/morning_brief/api/: __init__.py  app.py  dependencies.py  errors.py
src/morning_brief/api/middleware/: auth.py
src/morning_brief/api/routes/: briefs.py  health.py
src/morning_brief/api/schemas/: __init__.py  responses.py
src/morning_brief/application/: __init__.py  composition.py  delivery_router.py  orchestrator.py
src/morning_brief/config/: __init__.py  loader.py  settings.py
src/morning_brief/core/exceptions/: __init__.py  errors.py
src/morning_brief/core/interfaces/: __init__.py  analysis_engine.py  audit_store.py  base.py  data_provider.py  delivery_channel.py  guardrail.py  report_renderer.py
src/morning_brief/core/models/: __init__.py  analysis.py  audit.py  base.py  market_data.py  report.py
src/morning_brief/guardrails/: __init__.py  runner.py
src/morning_brief/guardrails/delivery/: __init__.py  rules.py
src/morning_brief/guardrails/input/: __init__.py  rules.py
src/morning_brief/guardrails/output/: __init__.py  rules.py
src/morning_brief/infrastructure/data/: __init__.py  mock_data_provider.py  yfinance_data_provider.py  yfinance_tickers.py
src/morning_brief/infrastructure/delivery/: __init__.py  email_delivery_channel.py  mock_delivery_channel.py
src/morning_brief/infrastructure/llm/: __init__.py  anthropic_analysis_engine.py  mock_analysis_engine.py
src/morning_brief/infrastructure/rendering/: __init__.py  content.py  html_email_renderer.py  mock_renderer.py
src/morning_brief/infrastructure/storage/: __init__.py  json_audit_store.py  json_serialization.py  mock_audit_store.py  s3_audit_store.py
src/morning_brief/observability/: __init__.py  logging.py  timing.py
src/morning_brief/prompts/: __init__.py  builder.py  models.py  registry.py  validator.py
tests/: conftest.py
tests/fixtures/: __init__.py  factories.py
tests/integration/: test_api_e2e.py  test_pipeline.py
tests/unit/: test_aws_bootstrap.py  test_aws_handlers.py  test_cli.py
tests/unit/test_api/: test_app.py
tests/unit/test_application/: test_composition.py  test_delivery_router.py  test_orchestrator.py
tests/unit/test_config/: test_settings.py
tests/unit/test_core/: test_models.py
tests/unit/test_guardrails/: test_delivery.py  test_input.py  test_output.py  test_runner.py
tests/unit/test_infrastructure/test_data/: test_mock_data_provider.py  test_yfinance_data_provider.py
tests/unit/test_infrastructure/test_delivery/: test_email_delivery_channel.py  test_mock_delivery_channel.py
tests/unit/test_infrastructure/test_llm/: test_anthropic_analysis_engine.py  (+1 more)
tests/unit/test_observability/: test_logging.py  test_timing.py
tests/unit/test_prompts/: test_builder.py  test_registry.py  test_validator.py
(+8 files in other folders)
