[project]
name = "morning-brief"
version = "0.1.0"
description = "Production LLM pipeline that compresses pre-market context assembly into a concise morning briefing."
readme = "README.md"
authors = [
    { name = "David Adarkwah", email = "72516754+adark-d@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.1",
    "anthropic>=0.105.2",
    "boto3>=1.35.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
    "yfinance>=1.4.1",
]

[project.scripts]
morning-brief = "morning_brief.cli:main"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.35.0",
    "moto[s3]>=5.0.0",
    "mypy>=2.1.0",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.16",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "C4",  # comprehensions
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
    "N",   # naming conventions
    "ANN", # annotations
    "ARG", # unused args
    "PTH", # use pathlib
    "RET", # return statements
    "TID", # tidy imports
]
ignore = [
    "E501", # line length (formatter handles)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN",
    "S101",
] # tests don't need full annotations or assertion warnings

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["yfinance", "pandas"]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src", "tests"]
extraPaths = ["."]  # resolve `tests.*` imports (pytest uses rootdir)
venvPath = "."
venv = ".venv"

# The strict gate is scoped to src/. The editor (Pylance) also checks open test
# files, where deliberately loose surfaces — fixtures, test doubles, and FastAPI's
# TestClient (untyped responses under strict) — produce only "unknown type" noise.
# This relaxes that family for tests/ so the editor stays clean without lowering
# the bar on production code or the gate.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportPrivateUsage = false
reportMissingTypeStubs = false
reportUnusedFunction = false
reportIncompatibleMethodOverride = false  # test doubles intentionally diverge

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config -v"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (may use real services)",
    "slow: Tests that take > 1 second",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/morning_brief"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/morning_brief"]

[tool.hatch.build.targets.wheel.shared-data]
"src/morning_brief/py.typed" = "morning_brief/py.typed"
